--- a/files/Backinfo/BackInfo.ini
+++ b/files/Backinfo/BackInfo.ini
@@ -58,6 +58,7 @@
 [General]
 BackgroundColor = 2097152
 AutoBackground = 0
+BackgroundBitmap = C:\Windows\Web\Wallpaper\Windows\windowsserver.bmp
 Output = %temp%\backinfo.bmp
 UpdateDesktop = 1
 LineSpacing = 2
@@ -181,4 +182,3 @@ Type = NetInfo
 ;  RegTitle = OS type
 
 
-BackgroundBitmap = C:\rosects\backinfo\windowsserver.bmp
